fix tet overflow/ add badges

--- a/app/scss/_myroutes.scss
+++ b/app/scss/_myroutes.scss
@@ -11,14 +11,14 @@
 		width: 100%;
 		margin-bottom: 2rem;
 		> a{
-			display: flex;
-			flex-direction: row;
-			align-items: center;
+			display: block;
 			width: 100%;
+			height: 110px;
 			padding: 1rem;
 			border-radius: $border-radius;
 			box-shadow: 0 0 2px 2px rgba(67,67,67,0.1);
 			overflow: hidden;
+			position: relative;
 			&:hover,
 			&:focus{
 				text-decoration: none;
@@ -30,7 +30,16 @@
 			}
 		}
 	}
+	.badge{
+		left: 70px;
+		top: .5rem;
+		@include media-breakpoint-down(xs) {
+			left: 60px;
+			top: 1rem;
+		}
+	}
 	&-img{
+		position: absolute;
 		margin-right: 1rem;
 		border-radius: 50%;
 		overflow: hidden;
@@ -40,11 +49,16 @@
 			width: 100%;
 		}
 		@include media-breakpoint-down(xs) {
-			width: 40px;
-			height: 40px;
+			width: 60px;
+			height: 60px;
+			transform: translateY(-50%);
+			top: 50%;
 		}
 	}
 	&-icon{
+		position: absolute;
+		left: 1rem;
+		top: 1rem;
 		margin-right: 1rem;
 		border-radius: 50%;
 		overflow: hidden;
@@ -60,19 +74,26 @@
 			text-align: center;
 		}
 		@include media-breakpoint-down(xs) {
-			width: 40px;
-			height: 40px;
+			width: 60px;
+			height: 60px;
+			transform: translateY(-50%);
+			top: 50%;
 			.fa{
-				font-size: 1rem;
-				line-height: 40px;
+				line-height: 60px;
 			}
 		}
 	}
 	&-descr{
+		display: block;
 		font-size: 1.25rem;
-		color: $grey-dark;
-		font-weight: bold;
-		width: 85%;
+		color: #3e4449;
+		font-weight: 700;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: 100%;
+		line-height: 80px;
+		padding-left: 95px;
 		&:after{
 			content: "\f105";
 			font-family: FontAwesome;
@@ -80,6 +101,7 @@
 		}
 		@include media-breakpoint-down(xs) {
 			font-size: 1rem;
+			padding-left: 75px;
 		}
 	}
 	@include media-breakpoint-down(xs) {
