--- a/app/scss/_places.scss
+++ b/app/scss/_places.scss
@@ -131,20 +131,24 @@
 		flex-direction: column;
 	}
 	&-item{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
+		//display: flex;
+		//flex-direction: row;
+		//align-items: center;
 		width: 100%;
 		border-bottom: 1px solid $border-color ;
 		padding: .75rem 0;
-		flex: 1;
-		flex-wrap: nowrap;
+		//flex: 1;
+		//flex-wrap: nowrap;
 		position: relative;
+		display: block;
 	}
 	&-item:last-child{
 		border-bottom: 0;
 	}
 	&-item-img{
+		position: absolute;
+		left: 0;
+		top: 1rem;
 		width: 50px;
 		height: 50px;
 		border-radius: 50%;
@@ -155,24 +159,10 @@
 			width: 100%;
 		}
 	}
-	.badge{
-		position: absolute;
-		width: 24px;
-		height: 24px;
-		-webkit-border-radius: 50%;
-		border-radius: 50%;
-		background: #0061af;
-		border: 1px solid #fff;
-		left: 27px;
-		top: 3px;
-		font-size: 10px;
-		font-weight: bold;
-		line-height: 17px;
-		color: white;
-		text-align: center;
-		padding: 4px;
-	}
 	&-descr{
+		display: block;
+		padding-left: 65px;
+		padding-right: 40px;
 		width: 100%;
 	}
 	&-item-close{
@@ -180,7 +170,9 @@
 		color: $text;
 		width: 25px;
 		height: 25px;
-		position: relative;
+		position: absolute;
+		right: 0;
+		top: 1.5rem;
 		overflow: hidden;
 		&:hover,
 		&:focus{
@@ -247,10 +239,18 @@
 		font-weight: bold;
 		color: $grey-dark;
 		font-size: 1.3125rem;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: 100%;
 	}
 	&-country{
 		font-size: 1rem;
 		margin-bottom: 0;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: 100%;
 	}
 	.row-cards{
 		width: 100%;
